# mcp_tutorial

./: .gitignore  README.md  azure-deploy.ps1  docker-compose.yml
.github/: copilot-instructions.md
azure_deployment/: azure-deploy.ps1  azure-deploy.sh
client/: client.py  pyproject.toml  sse_client.py  test_memory.py
doc/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  PROJECT_CONFIG.md  PROJECT_SUMMARY.md  TUTORIAL_GUIDE.md
docker_deployment/: docker-compose.yml
mcp_gateway/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  auth.py  config.py  gateway.py  main.py  pyproject.toml  tool_discovery.py
mcp_gateway/mcp_gateway/: config.py  gateway.py  health.py  tool_discovery.py
server/: Dockerfile  pyproject.toml  weather.py
server/news/: .env.example  Dockerfile  README.md  news.py  pyproject.toml
server/weather/: .env.example  Dockerfile  README.md  pyproject.toml  weather.py
web_client/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  README.md  README_NEW.md  README_OLD.md  main.py  mcp_client.py  mcp_gateway_client.py  models.py  pyproject.toml
