[project]
name = "mcp-gateway-web-client"
version = "1.0.0"
description = "Web service client for MCP Gateway - Enterprise team client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "mcp>=1.9.2",
    "openai>=1.82.1",
    "python-dotenv>=1.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
